v9.8
- commands: 62
* Now for /sm or /mob you can type the amount of that mob you want to spawn! ex. /mob cow 1000.
* Added a constructor to every class.
* It will now log in the console whenever a command is used.
* Fixed permission bug with /home

v9.7
- commands: 62
+ Now when typing /info it will tell you how many blocks the player has broken.
+ Now when typing /info it will tell you how many blocks the player has placed.
* Changed code in /info. Still works the same.
* Removed Log class. uses minecraft logger now.
* Combined code for Join/Leave listeners.
* Now when a player logs on for the first time, all fields in PlayerData file will be occupied.
* Changed ReadMe.txt

v9.6 
- commands: 62
+ Now when typing /info it will tell you how many times the player has been kicked.
+ Now when typing /info it will tell you when the player first joined the server.
+ Now when typing /info it will tell you when the player was last seen.
+ Data for /info is now stored in a file, so you can check player info on offline players!!!
* Organized files into folders.
* Files were added.
* A new file is created called PlayerData, which tracks data of players, starting when they first log on.
* Changed alot of code in the main.
* Fixed error with /ea
* Fixed error with /0, /1, and /2
* Fixed error with spawning cave spider
* Fixed error with spawning golem
* Fixed error with spawning wither
* Fixed error with spawning witch
* Fixed error with spawning magma cube
* Fixed error with spawning ender dragon
* Now you can type /sm OR /mob

v9.5: 
- commands: 62
+ Added /tpto command! Tp to coordinates!
+ Added /quit command! Type /quit then some words to have a custon quit message!
* Fixed error in /kick.
* Fixed error in /ban.
* Fixed error in /tp.
* Fixed error in /summon
* Nolonger shows the default quit/exit message when executing /kick, /ban, /kickall, or /quit.

v9.4: 
- commands: 60
+ Added /item command! Give yourself any item! And you can specify the amount!